libs/toolkit-security/tests/ui/platform_context_is_not_tenant_context.stderr
error[E0308]: mismatched types
  --> tests/ui/platform_context_is_not_tenant_context.rs:18:26
   |
18 |     takes_tenant_context(&platform);
   |     -------------------- ^^^^^^^^^ expected `&SecurityContext`, found `&PlatformSecurityContext`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected reference `&SecurityContext`
              found reference `&PlatformSecurityContext`
note: function defined here
  --> tests/ui/platform_context_is_not_tenant_context.rs:7:4
   |
 7 | fn takes_tenant_context(_ctx: &SecurityContext) {}
   |    ^^^^^^^^^^^^^^^^^^^^ ----------------------
